<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shop"
            android:title="@string/menu_shop" />

        <item
            android:id="@+id/nav_book_consultant"
            android:icon="@drawable/ic_ticket"
            android:title="@string/menu_book_consultant" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_blog"
            android:title="@string/menu_blog" />
    </group>
</menu>