<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bggrey"
    tools:context=".Fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingTop="50dp"
                android:paddingRight="40dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvEmailAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfproroundedsemibold"
                        android:text="@string/ph_number"
                        android:textColor="@color/grey"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPhNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:backgroundTint="@color/black"
                        android:fontFamily="@font/sfproroundedsemibold"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@color/black" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfproroundedsemibold"
                        android:text="@string/password"
                        android:textColor="@color/grey"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:backgroundTint="@color/black"
                        android:fontFamily="@font/sfproroundedsemibold"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/sfproroundedsemibold"
                        android:text="@string/forgot_password"
                        android:textColor="@color/orange"
                        android:textSize="15sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llbtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btbg"
                    android:fontFamily="@font/sfproroundedsemibold"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btSkipToMainContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20_dp"
                    android:layout_marginTop="@dimen/_10_dp"
                    android:background="@drawable/btbg"
                    android:fontFamily="@font/sfproroundedsemibold"
                    android:text="@string/skip_to_main_content"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</FrameLayout>