<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activitiestwo.AppointmentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llToolbarHome"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="@dimen/_10_dp"
                android:weightSum="1"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:padding="@dimen/_5_dp"
                    android:src="@drawable/ic_back" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBookAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:fontFamily="@font/sfproroundedlight"
                    android:gravity="center_vertical"
                    android:paddingLeft="0dp"
                    android:text="@string/book_an_appointment"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_20_sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbarHome" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/llToolbarHome">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10_dp"
                    android:fontFamily="@font/sfproroundedlight"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_18_sp"
                    android:visibility="gone" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/llMonth">

                <DatePicker
                    android:id="@+id/date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:calendarViewShown="true"
                    android:spinnersShown="false" />

                <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                    android:id="@+id/timeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:smsp_floatingLabelColor="@color/darkGreen"
                    app:smsp_floatingLabelText="Select Time"
                    app:smsp_hint="Select time"
                    app:smsp_hintColor="@color/black"
                    app:smsp_itemColor="@color/black"
                    app:smsp_itemListColor="@color/black"
                    app:smsp_itemListHintBackgroundColor="#ffffff"
                    app:smsp_itemListHintColor="#FFFFFF"
                    app:smsp_multilineError="false"
                    app:smsp_selectedItemListColor="@color/darkGreen"
                    app:smsp_typeface="sfproroundedlight" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llAppointmentDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_20_dp"
                app:layout_constraintTop_toBottomOf="@id/llDatePicker">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAppointmentDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10_dp"
                    android:fontFamily="@font/sfproroundedbold"
                    android:gravity="left"
                    android:text="@string/appointment_details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18_sp"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10_dp"
                    android:fontFamily="@font/sfproroundedlight"
                    android:gravity="left"
                    android:text="@string/full_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13_dp"
                    android:visibility="visible" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5_dp"
                    android:fontFamily="@font/sfproroundedlight"
                    android:gravity="left"
                    android:text="@string/contact_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13_dp"
                    android:visibility="visible" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btBookAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="@dimen/_10_dp"
                    android:layout_weight="1"
                    android:background="@drawable/btbg"
                    android:text="Book Appointment"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>